correlated multi-jitter with high samples "hangs" #41601

Closed
opened 2014-08-27 15:51:54 +02:00 by Ronny G · 8 comments

System Information
ubuntu 14.04, i7-4930k, 630gt

Blender Version
Broken: fe7de92

Exact steps for others to reproduce the error

  1. render with 420 aa samples (works)
  2. render with 421 aa samples (hangs)

screenshot:

Screenshot_from_2014-08-27_15:50:05.png

blend:

nudelZ_cornell_arnold_bug.blend

**System Information** ubuntu 14.04, i7-4930k, 630gt **Blender Version** Broken: fe7de92 **Exact steps for others to reproduce the error** 1. render with 420 aa samples (works) 2. render with 421 aa samples (hangs) screenshot: ![Screenshot_from_2014-08-27_15:50:05.png](https://archive.blender.org/developer/F107010/Screenshot_from_2014-08-27_15_50_05.png) blend: [nudelZ_cornell_arnold_bug.blend](https://archive.blender.org/developer/F107012/nudelZ_cornell_arnold_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Confirmed.
Note: You can decrease the Sub Sample Values (Diffuse, Glossy ...) to 1, same result.

The problem is related to Sample All Lights, disable both Direct/Indirect and it renders.

Confirmed. Note: You can decrease the Sub Sample Values (Diffuse, Glossy ...) to 1, same result. The problem is related to Sample All Lights, disable both Direct/Indirect and it renders.

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2014-08-27 18:01:39 +02:00

This issue was referenced by d84c15696b

This issue was referenced by d84c15696b2949b7e596b1f75e5864033fd9d067

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d84c15696b.

Closed by commit d84c15696b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41601
No description provided.